fix(styles): remove complex margin-block-start calculation to ensure consistent spacing on larger screens

--- a/src/routes/styles/foundation/_base.scss
+++ b/src/routes/styles/foundation/_base.scss
@@ -76,7 +76,7 @@ h3 + h4 {
 h1 {
 	font-size: 1.875rem;
 	@media screen and (min-width: 1024px) {
-		margin-block-start: calc(var(--spacing-s) - var(--half-leading));
+		margin-block-start: 0;
 	}
 }
 
